test/bad/empty_enum.veld
// BAD: empty enum (no values)
enum Empty {
}

